--- a/src/styles.scss
+++ b/src/styles.scss
@@ -145,6 +145,7 @@
             font-size: 10px;
             border: none;
             cursor: pointer;
+            border-radius: 10px;
 
             @include tablet {
               position: absolute;
@@ -172,7 +173,7 @@
       }
 
       .chats {
-        height: calc(100% - 170px);
+        height: calc(100% - 112px);
         overflow-y: scroll;
       }
       .userChat {
@@ -328,4 +329,18 @@
       }
     }
   }
+}
+
+button:hover {
+  transform: translateY(-1.5px);
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+button:active,
+button:focus {
+  outline: none;
+  transform: translateY(
+    0px
+  ); /* Ajout de l'effet de translation vers le bas lors du clic */
+  box-shadow: none; /* Suppression de l'effet d'ombre lors du clic */
 }
