--- a/src/styles.scss
+++ b/src/styles.scss
@@ -122,6 +122,7 @@
 
         .logo {
           font-weight: bold;
+          font-size: 24px;
           @include tablet {
             display: none;
           }
